--- a/Frontend/ProyectoVenta/src/index.html
+++ b/Frontend/ProyectoVenta/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProyectoVenta</title>
+  <title>Tacos, cheveres y tortas</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/images/logos/logo1.png">
+  <!-- Opcional: Para diferentes dispositivos (recomendado) -->
+  <link rel="apple-touch-icon" href="assets/images/logos/logo1.png">
+  <link rel="shortcut icon" href="assets/images/logos/logo1.png" type="image/png">
+  
 </head>
 <body>
   <app-root></app-root>
